# CandCPPCourse

./: CMakeLists.txt
CPP_Course/ex1/: ConvexHull.cpp  LinkedList.cpp  LinkedList.h  Makefile  Point.cpp  Point.h  PointSet.cpp  PointSet.h  PointSetBinaryOperations.cpp  README
CPP_Course/ex2/: Defs.h  Line.cpp  Line.h  Makefile  Point.cpp  Point.h  README  Shape.cpp  Shape.h  ShapeUtils.cpp  ShapeUtils.h  Shapes.cpp  Trapezoid.cpp  Trapezoid.h  Triangle.cpp  Triangle.h  tester.py
CPP_Course/ex2/testFiles/: degenerateTriangle0.in  degenerateTriangle0.out  degenerateTriangle1.in  degenerateTriangle10.in  degenerateTriangle10.out  degenerateTriangle11.in  degenerateTriangle12.in  degenerateTriangle13.in  degenerateTriangle14.in  degenerateTriangle15.in  degenerateTriangle16.in  degenerateTriangle16.out  degenerateTriangle17.in  degenerateTriangle17.out  degenerateTriangle18.in  degenerateTriangle18.out  degenerateTriangle19.in  degenerateTriangle19.out  degenerateTriangle2.in  degenerateTriangle3.in  degenerateTriangle3.out  degenerateTriangle4.in  degenerateTriangle5.in  degenerateTriangle5.out  degenerateTriangle6.in  degenerateTriangle7.in  degenerateTriangle8.in  degenerateTriangle9.in  epsilonCheck0.in  epsilonCheck0.out  epsilonCheck1.in  epsilonCheck1.out  epsilonCheck10.in  epsilonCheck10.out  epsilonCheck11.in  epsilonCheck11.out  epsilonCheck12.in  epsilonCheck12.out  epsilonCheck13.in  epsilonCheck13.out  (+254 more)
CPP_Course/ex2/testsFiles/: badtest0.in  badtest1.in  badtest10.in  badtest11.in  badtest2.in  badtest3.in  badtest4.in  badtest5.in  badtest6.in  badtest7.in  badtest8.in  badtest9.in  basicTriangle.in  contFcrossF.in  crossTcontF.in  crossTcontT.in  inside.in  randomtest0.in  randomtest1.in  randomtest10.in  randomtest11.in  randomtest12.in  randomtest13.in  randomtest14.in  randomtest15.in  randomtest16.in  randomtest17.in  randomtest18.in  randomtest19.in  randomtest2.in  randomtest20.in  randomtest21.in  randomtest22.in  randomtest23.in  randomtest24.in  randomtest25.in  randomtest26.in  randomtest27.in  randomtest28.in  randomtest29.in  (+81 more)
CPP_Course/ex3/: BonusParallelChecker.cpp  GenericMatrixDriver.cpp  Makefile  Matrix.hpp  README  tester.py
C_Course/ex1/: ChangeBase.c
C_Course/ex2/: CheckDependency.c  Makefile  MyLinkedList.h  README  valdbg_check_dependency.out  valdbg_list_example.out
C_Course/ex2/tests/: CheckDependency.out
C_Course/ex2/tests/RDEP/: file.h  rdep1.in
C_Course/ex3/: GenericHashTable.c  HashIntSearch.c  Makefile  MyIntFunctions.c  MyStringFunctions.c
C_Course/ex3/tests/SearchIntsIO/: SearchInts_1_-17.out  SearchInts_20_-4.out  SearchInts_20_13.out  SearchInts_20_5.out
C_Course/ex3/tests/SearchStrsIO/: SearchStrs_22_abcd.out  SearchStrs_22_abgk.out  SearchStrs_22_hijk.out  SearchStrs_22_lmno.out  SearchStrs_30_abcd.out  SearchStrs_30_abgk.out  SearchStrs_30_lmno.out
CandCpp/: CandCpp.sln
CandCpp/CandCpp/: CandCpp.vcxproj  CandCpp.vcxproj.filters  LinkedList.h
CandCpp/ex2/: Shapes.cpp  ex2.vcxproj
ex1/: ChangeBase.c  CheckParenthesis.c  test
ex2/: CheckDependency.c  ListExample.c  Makefile  MyLinkedList.c  MyLinkedList.h  README  ReadDependency.c  check_dependancy.c  check_dependency.c
ex2/tests/: CheckDependency.in
ex2/tests/RDEP/: file3.h  rdep1.in
ex3/: GenericHashTable.c  GenericHashTable.h  HashIntSearch.c  HashStrSearch.c  HashStringSearch.c  Key.h  Makefile  MyIntFunction.c  MyIntFunction.h  MyIntFunctions.c  MyIntFunctions.h  MyStringFunction.c  MyStringFunction.h  MyStringFunctions.c  MyStringFunctions.h
ex3/tests/SearchIntsIO/: SearchInts_20_-17.out  SearchInts_20_0.out  SearchInts_20_1.out  SearchInts_20_2.out
ex3/tests/SearchStrsIO/: SearchStrs_30_hijk.out
