cmake_minimum_required(VERSION 3.3.2)
project(CandCPPCourse)

#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wextra -Wall -Wvla -std=c99")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra -Wall -Wvla -std=gnu++11")

#add_library(MyLinkedList ex2/MyLinkedList.c)
#add_executable(ListExample ex2/ListExample.c)
#target_link_libraries(ListExample MyLinkedList)
#add_executable(CheckDependency ex2/CheckDependency.c)
#add_executable(ReadDependency ex2/ReadDependency.c)

#add_library(GenericHashTable C_Course/ex3/GenericHashTable.c)
#add_library(MyStringFunctions C_Course/ex3/MyStringFunctions.c)
#add_library(MyIntFunctions C_Course/ex3/MyIntFunctions.c)
#add_library(TableErrorHandle C_Course/ex3/TableErrorHandle.c)
#add_executable(HashIntSearch C_Course/ex3/HashIntSearch.c)
#add_executable(HashStrSearch C_Course/ex3/HashStrSearch.c)
#target_link_libraries(HashIntSearch GenericHashTable MyIntFunctions TableErrorHandle)
#target_link_libraries(HashStrSearch GenericHashTable MyStringFunctions TableErrorHandle)

add_library(PointSet CPP_Course/ex1/PointSet.cpp)
add_library(Point CPP_Course/ex1/Point.cpp)
add_executable(ConvexHull CPP_Course/ex1/ConvexHull.cpp )
target_link_libraries(ConvexHull PointSet Point LinkedList)